Add final versions of all model notebooks for pipeline extraction

--- a/notebooks/02-baseline-model.ipynb
+++ b/notebooks/02-baseline-model.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "759d0b74-594f-4983-8d79-1a8ad5d204b4",
+   "metadata": {},
+   "source": [
+    "# Implement a simple MLP in TensorFlow/Keras, train on the preprocessed data, and evaluate its baseline performance (RMSE) on validation and test sets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b79a91e3-e9b4-451d-97a2-6e7f93a8acd2",
    "metadata": {},
    "source": [
